# Tropico

./: .env.example  .gitattributes  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  biome.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  solo.yml  tailwind.config.ts  tsconfig.json
.atl/: .skill-registry.cache.json  skill-registry.md
.husky/: pre-commit
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: AfiliarForm.tsx  AgentActionCard.tsx  AgentHistory.tsx  AgentToggle.tsx  AuthCTA.tsx  AuthRedirect.tsx  Badge.tsx  BalanceList.tsx  BottomNav.tsx  BsSwapForm.tsx  BsSwapFormPrivy.tsx  ComparativaTabla.tsx  DevnetFaucetButton.tsx  DualPrice.tsx  FaucetCard.tsx  Greeting.tsx  Header.tsx  HomeBalances.tsx  HomeBalancesPrivy.tsx  InAppPreviewBanner.tsx  LanguageSwitcher.tsx  Logo.tsx  MisInmueblesPrivy.tsx  MisInmueblesView.tsx  ModuleCard.tsx  PagarComercioBs.tsx  PagarComercioBsEntry.tsx  PixelLoader.tsx  ProfilePrivyEmail.tsx  ProfilePrivyLogout.tsx  ProfileView.tsx  PropertyBuyForm.tsx  PropertyBuyFormPrivy.tsx  PropertyCard.tsx  ProposalCard.tsx  RailStatusBanner.tsx  ReceiveQR.tsx  RewardClaimCard.tsx  ScrollReveal.tsx  SendForm.tsx  (+11 more)
docs/: ANCHOR_PROGRAM.md  ARCHITECTURE.md  ASSETS_REPO.md  BANNER_PROMPT.md  BLOCKCHAIN_BACKEND.md  BUSINESS_MODEL.md  CARLOS_AI.md  CLAIM_SYSTEM.md  COLOSSEUM_SUBMISSION.md  COMPETITIVE_LANDSCAPE.md  DEMO_READINESS.md  DEMO_RUNBOOK.md  DEMO_VIDEO_SCRIPT.md  DEPLOY.md  ENV_TEMPLATE.md  FAQ_FOR_JUDGES.md  (+27 more)
programs/tropico_treasury/: Cargo.toml
programs/tropico_treasury/src/: lib.rs
(+124 files in other folders)
