[package]
name = "tropico_treasury"
version = "0.1.0"
description = "Tropico Treasury — fee recorder + multi-sig vault on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tropico_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
